modificacion de html respecto a clases

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header class="header">
@@ -16,7 +16,7 @@
                 </svg>
             </div>
             <nav class="header__nav-links">
-                <ol class="header__nav-links__nav-list">
+                <ul class="header__nav-links__nav-list">
                     <li class="header__nav-links__nav-lista-item">
                         <span>PRODUCTOS</span>
                     </li>
@@ -27,9 +27,9 @@
                         <span>NOVEDADES</span>
                     </li>
                     <li class="header__nav-links__nav-lista-item">
-                        <span>SOPORTE</span>
+                        <a href="https://rog.asus.com/ar/support/" type="_blank">SOPORTE</a>
                     </li>
-                </ol>
+                </ul>
             </nav>
             <div class="header__container-icons">
                 <div class="header__container-icons__logo-asus">
